<resources>
    <string name="app_name">TaLigado</string>
    <string name="nome_da_filial">Nome da Filial</string>
    <string name="mais_informacoes">Mais Informações +</string>
    <string name="todo">TODO</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="minhas_filiais">Minhas Filiais</string>
    <string name="adicionar_filial">Adicionar Filial</string>
    <string name="dispositivos_fragment">Dispositivos Fragment</string>
    <string name="novo">Novo</string>
    <string name="retornando">Retornando</string>
    <string name="bem_vindo_de_volta">Bem-vindo de volta!</string>
    <string name="subtitulo_login">Entre para acessar sua experiência personalizada do TáLigado</string>
    <string name="entrar_com_apple">Entrar com Apple</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="entrar_com_celular">Entrar com celular</string>
    <string name="entrar_com_e_mail">Entrar com e-mail</string>
    <string name="termos_privacidade">Ao se cadastrar, você concorda com os Termos de Uso e Política de Privacidade do TáLigado</string>
    <string name="registre_no_taligado">Registre-se no TáLigado!</string>
    <string name="registre_conta">Registre uma conta grátis para controlar seu consumo e reduzir suas possiveis emissões de carbono</string>
    <string name="registrar_com_apple">Registrar com Apple</string>
    <string name="registrar_com_google">Registrar com Google</string>
    <string name="registrar_com_e_mail">Registrar com e-mail</string>
    <string name="termos_uso">Ao se cadastrar, você concorda com os Termos de Uso e Política de Privacidade do TáLigado</string>
    <string name="filial">Nome da Filial</string>
    <string name="escolher_imagem">Escolher Imagem</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="entrar">Entrar</string>
    <string name="e_mail_ou_nome">E-mail ou Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_senha">Esqueceu senha?</string>
    <string name="aceito_os_termos">Eu aceito os Termos e Política de Privacidade</string>
    <string name="bem_vindo_ao_dashboard">Bem-vindo ao Dashboard!</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nome_de_usu_rio">Nome de usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="senha_mais_de_8_caracteres">Senha (mais de 8 caracteres)</string>
    <string name="cnpj">CNPJ</string>
    <string name="privacidade_do_taligado">Ao se cadastrar, você concorda com os Termos de Uso e Política de Privacidade do TáLigado</string>
</resources>