<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Barra de título com seta para voltar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/voltar"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <!-- Título centralizado -->
        <TextView
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/entrar"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- Campo de email -->

    <!-- Campo de senha -->

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:hint="@string/e_mail_ou_nome"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="16dp" />

    <!-- Link de Esqueceu a senha -->
    <TextView
        android:id="@+id/txtEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_senha"
        android:textColor="@color/splash_background_color"
        android:layout_marginTop="36dp"
        android:layout_gravity="start" />

    <!-- Botão de Entrar -->
    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceito_os_termos"

        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"/>


</LinearLayout>
