<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Imagem da filial -->
        <ImageView
            android:id="@+id/imgFilial"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"/>

        <!-- Nome da filial -->
        <TextView
            android:id="@+id/txtNomeFilial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_da_filial"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <!-- Botão de mais informações -->
        <Button
            android:id="@+id/btnMaisInformacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mais_informacoes"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
